Fix styling for pagination gap element.

--- a/app/assets/stylesheets/screen.scss
+++ b/app/assets/stylesheets/screen.scss
@@ -58,6 +58,11 @@
     float: right;
 }
 
+.pagination ul .gap {
+  border: none;
+}
+
+
 // Form
 .search-form {
     float: left;
